// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e tests should run 01-simple-readme as expected 1`] = `
"
Output

----- README.md ----- 

--- Snippet #1 ---
42


 PASS  0-README.md

  Files: 1
  Snippets succeded: 1
"
`;

exports[`e2e tests should run 03-multiple-files as expected 1`] = `
"
Output

----- DOCS.md ----- 

--- Snippet #1 ---
42


----- README.md ----- 

--- Snippet #1 ---
42


 PASS  0-DOCS.md
 PASS  0-README.md

  Files: 2
  Snippets succeded: 2
"
`;

exports[`e2e tests should run 04-multiple-snippets as expected 1`] = `
"
Output

----- README.md ----- 

--- Snippet #1 ---
42


--- Snippet #2 ---
42


 PASS  0-README.md
 PASS  1-README.md

  Files: 1
  Snippets succeded: 2
"
`;
